--- a/Java-从0开始（基础）/24.JDBC/JDBC-Proj/pom.xml
+++ b/Java-从0开始（基础）/24.JDBC/JDBC-Proj/pom.xml
@@ -13,6 +13,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.22</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.4.5</version>
+        </dependency>
+
+
     </dependencies>
 
 
